force-app/main/default/objects/Assett__c/Assett__c.object-meta.xml
<CustomObject>
    <description>Stores Information of Corporate IT Assets</description>
    <label>Asset</label>
    <nameField>
        <label>Name of device</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>