force-app/main/default/objects/Assett__c/fields/AssetDescription__c.field-meta.xml
<CustomField>
    <fullName>AssetDescription__c</fullName>
    <description>What is this asset</description>
    <label>Description</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>