force-app/main/default/objects/Assett__c/fields/AssetLocation__c.field-meta.xml
<CustomField>
    <fullName>AssetLocation__c</fullName>
    <description>Where is it Located</description>
    <label>Location</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>