force-app/main/default/objects/Assett__c/fields/AssetManufacturer__c.field-meta.xml
<CustomField>
    <fullName>AssetManufacturer__c</fullName>
    <description>Name of Manufactuter</description>
    <label>Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acer</fullName>
            </value>
            <value>
                <fullName>Apple</fullName>
            </value>
            <value>
                <fullName>Brother</fullName>
            </value>
            <value>
                <fullName>Canon</fullName>
            </value>
            <value>
                <fullName>Cisco</fullName>
            </value>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>Hewlett Packard</fullName>
            </value>
            <value>
                <fullName>IBM</fullName>
            </value>
            <value>
                <fullName>Motorola</fullName>
            </value>
            <value>
                <fullName>Netgear</fullName>
            </value>
            <value>
                <fullName>Samsung</fullName>
            </value>
            <value>
                <fullName>View Sonic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>