force-app/main/default/objects/Assett__c/fields/AssetModelNum__c.field-meta.xml
<CustomField>
    <fullName>AssetModelNum__c</fullName>
    <description>The Model Number of the Equipment</description>
    <externalId>true</externalId>
    <label>Model Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>