force-app/main/default/objects/Assett__c/fields/AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>AssignedTo__c</fullName>
    <description>Who is responsible for the asset</description>
    <label>Assigned To</label>
    <length>150</length>
    <type>Text</type>
</CustomField>