force-app/main/default/objects/Assett__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Computer</fullName>
            </value>
            <value>
                <fullName>Printer</fullName>
            </value>
            <value>
                <fullName>Server</fullName>
            </value>
            <value>
                <fullName>Network Hardware</fullName>
            </value>
            <value>
                <fullName>Mobile Devices</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>