force-app/main/default/objects/Assett__c/fields/DatePurchased__c.field-meta.xml
<CustomField>
    <fullName>DatePurchased__c</fullName>
    <description>The Date the asset was Purchased</description>
    <label>Date Purchased</label>
    <required>true</required>
    <type>Date</type>
</CustomField>