force-app/main/default/objects/Assett__c/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Service</fullName>
                <default>true</default>
                <label>In Service</label>
            </value>
            <value>
                <fullName>Re purposed</fullName>
            </value>
            <value>
                <fullName>Recycled</fullName>
            </value>
            <value>
                <fullName>Disposed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>