force-app/main/default/objects/Assett__c/fields/OOSDate__c.field-meta.xml
<CustomField>
    <fullName>OOSDate__c</fullName>
    <description>The Date the asset was taken out of service</description>
    <label>Out Of Service Date</label>
    <type>Date</type>
</CustomField>