force-app/main/default/objects/Assett__c/fields/SerialNum__c.field-meta.xml
<CustomField>
    <fullName>SerialNum__c</fullName>
    <description>The Serial number of the equipment</description>
    <externalId>true</externalId>
    <label>Serial Number</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>