force-app/main/default/objects/Assett__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desktop PC</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Laptop PC</fullName>
            </value>
            <value>
                <fullName>Mobile Phone</fullName>
            </value>
            <value>
                <fullName>Monitor</fullName>
            </value>
            <value>
                <fullName>Network Switch</fullName>
            </value>
            <value>
                <fullName>Printer</fullName>
            </value>
            <value>
                <fullName>Projector</fullName>
            </value>
            <value>
                <fullName>Router</fullName>
            </value>
            <value>
                <fullName>Scanner</fullName>
            </value>
            <value>
                <fullName>Server</fullName>
            </value>
            <value>
                <fullName>Tablet</fullName>
            </value>
            <value>
                <fullName>Copier</fullName>
            </value>
            <value>
                <fullName>Firewall</fullName>
            </value>
            <value>
                <fullName>Multifunction Printer</fullName>
            </value>
            <value>
                <fullName>Shredder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>