force-app/main/default/objects/Assett__c/validationRules/Out_os_Service_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Out_os_Service_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
   Out_of_Service__c  = TRUE,
  ISBLANK( OOSDate__c )
)</errorConditionFormula>
    <errorDisplayField>OOSDate__c</errorDisplayField>
    <errorMessage>Please Enter the out of Service date</errorMessage>
</ValidationRule>